# lux

./: .env.example  .env.local  .gitignore  AGENTS.md  CLA.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLE_FLOW.md  FEATURE_PLAN.md  HISTORY.md  INSTALL.md  INVARIANTS.md  LICENSE  PLAN.md  PLAN_ssh_keys.md  README.md  SECURITY.md  TESTING.md  UI_API.md  UI_DESIGN.md  agent_harness_vm_layout.md  compose.codex.yml  compose.ui.yml  compose.yml  dev_log.md  docker_desktop_vm.md  install_lasso.sh  install_lux.sh  kernel_auditing_info.md  overview.md  platform.md  pyproject.toml  scratch_notes.md  to_do.md  user_flow.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  ci-pr.yml  ci-stress.yml  prepare-release-pr.yml  release.yml
Guide/: CONFIG.md
agent/: Dockerfile  README.md  entrypoint.sh  provider_auth.md  sshd_config
collector/: Dockerfile  README.md  auditd_data.md  auditd_filtered_data.md  auditd_raw_data.md  eBPF_data.md  ebpf_filtered_data.md  ebpf_raw_data.md  ebpf_summary_data.md  entrypoint.sh  forbidden_policy.md  ownership_and_attribution.md  timeline_data.md  timeline_filtered_data.md
collector/config/: README.md  audit_filtering.md  auditd.conf  auditd.md  auditd_rules.md  ebpf_filtering.md  ebpf_filtering.yaml  ebpf_summary.md  ebpf_summary.yaml  filtering.yaml  filtering_rules.md  forbidden_detection.yaml  forbidden_policy.yaml  merge_filtering.md  merge_filtering.yaml
collector/ebpf/: Cargo.toml
collector/ebpf/ebpf/: Cargo.toml
collector/ebpf/ebpf/src/: lib.rs
collector/ebpf/loader/: Cargo.toml
collector/ebpf/loader/src/: main.rs
collector/scripts/: detect_forbidden.py  ebpf_activity.sh  filter_audit_logs.py  filter_ebpf_logs.py  merge_filtered_logs.py  run_test.sh  summarize_ebpf_logs.py
collector/tests/: test_ebpf_filter.py  test_ebpf_summary.py  test_filter.py  test_forbidden_detector.py  test_merge_filtered.py
docs/: README.md  glossary.md
docs/agent_classes/: audit.md  brainstorm.md  create_spec.md  explain.md  implement_spec.md  one_off.md
docs/agents/: README.md
docs/architecture/: README.md  design_doc.md  overview.md  platform_notes.md  ui_design.md
docs/audits/: 20260216-020612_runtime-control-plane-ux-plan-final-review.md  20260216-025824_spec-final-implementability-review.md  20260216-215038_home-scoped-workspace-log-root-spec-audit.md  20260218-133939_lux-hard-rename-spec-audit.md  README.md  (+6 more)
example_logs/: .active_run.json  README.md  ebpf_filtering_test.yaml  filtered_audit.jsonl  filtered_ebpf.jsonl  filtered_ebpf_summary.jsonl  filtered_timeline.jsonl  filtering_test.yaml  merge_filtering_test.yaml
harness/: Dockerfile  README.md  api.md  artifacts.md  asciinema.py  entrypoint.sh  harness.py
lasso/: Cargo.toml  README.md
lasso/config/: default.yaml
lasso/src/: main.rs
lasso/tests/: cli.rs
legal/: README.md  legal_use.md  log_retention.md  open_source_compliance.md
logs/: block1_ebpf.jsonl  ebpf.jsonl  ebpf_ab_cgroup.jsonl  ebpf_summary_test.yaml  example_ebpf.jsonl  filtered_audit.jsonl  filtered_ebpf.jsonl  filtered_ebpf_summary.jsonl  filtered_timeline.jsonl  merge_filtering_test.yaml
lux/: Cargo.toml  README.md
proxy/: Dockerfile  README.md  entrypoint.sh  parse_squid_access.py  proxy_auth_helper.py  squid.conf
scripts/: all_tests.py  all_tests.sh  run_integration_codex.sh  run_integration_concurrent_sessions_jobs.sh  run_integration_filter_ebpf_job.sh  run_integration_filter_job.sh  run_integration_filter_no_harness.sh  run_integration_filter_tui.sh  run_integration_merge.sh  run_integration_stub.sh  run_lasso_cli_integration.sh  verify_test_delta.py
tests/: README.md  SYNTHETIC_LOGS.md  __init__.py  conftest.py  test_principles.md  testing_prompt.md
ui/: Dockerfile  README.md  app.js  index.html  package-lock.json  package.json  server.py  styles.css
(+262 files in other folders)
