[project]
name = "lasso-tests"
version = "0.3.0"
description = "Testing and CI tooling for Lasso"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.0",
    "PyYAML>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: pure logic tests with no Docker dependencies",
    "fixture: deterministic fixture/golden tests",
    "integration: docker-backed stack integration tests",
    "agent_codex: local-only codex agent end-to-end tests",
    "agent_claude: local-only claude agent end-to-end tests",
    "external_install: manual GitHub release install smoke tests (opt-in)",
    "stress: repeated race/concurrency tests",
    "regression: bug-specific regression tests",
]
