[package]
name = "lasso"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
