[package]
name = "collector-ebpf-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aya = "0.12"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting"] }
