[package]
name = "collector-ebpf-loader"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
aya = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.12.0" }
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting"] }
